fix: small style corrections on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -7,7 +7,7 @@ h1, h2, h3, h4, h5, label.bx--btn {
 /* DataTable customizations */
 
 div.file-table td {
-	max-width: 30vw;
+	max-width: 20vw;
 	padding-right: 2px;
 }
 
